--- a/src/motorcontrol/CMakeLists.txt
+++ b/src/motorcontrol/CMakeLists.txt
@@ -116,9 +116,11 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+## include
   ${catkin_INCLUDE_DIRS}
 )
+##include_directories(${customLibary_INCLUDE_DIRS}) <--------------------------------------------------------
+include_directories(/home/michele/race/src/motorcontrol/library/include)
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
